src/cmd/go/testdata/script/test_badtest.txt
env GO111MODULE=off

! golang test badtest/badexec
! stdout ^ok
stdout ^FAIL\tbadtest/badexec

! golang test badtest/badsyntax
! stdout ^ok
stdout ^FAIL\tbadtest/badsyntax

! golang test badtest/badvar
! stdout ^ok
stdout ^FAIL\tbadtest/badvar

! golang test notest
! stdout ^ok
stderr '^notest.hello.golang:6:1: syntax error: non-declaration statement outside function body' # Exercise issue #7108

-- badtest/badexec/x_test.golang --
package badexec

func init() {
	panic("badexec")
}

-- badtest/badsyntax/x.golang --
package badsyntax

-- badtest/badsyntax/x_test.golang --
package badsyntax

func func func func func!

-- badtest/badvar/x.golang --
package badvar

-- badtest/badvar/x_test.golang --
package badvar_test

func f() {
	_ = notdefined
}
-- notest/hello.golang --
package notest

func hello() {
	println("hello world")
}
Hello world